--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'groovy'
 
 // instruct Gradle to look in mavenCentral repository first, then the /lib directory 
 repositories {
@@ -9,6 +10,7 @@ repositories {
 dependencies {
 	compile "log4j:log4j:1.2.17"
 	
+	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 	testCompile "org.hamcrest:hamcrest-library:1.3"
 	testCompile "junit:junit-dep:4.11"
 
